# EE5127-Project

./: .gitignore  cust_cbor_decode.py  cust_senml_decode.py  data.csv  dataset-generator.ipynb  main.py  normalization_params.json  normalization_params.py  pyproject.toml
CircuitPython/: async_status.py  code.py
dataset/: features_DESIRED.txt
report/: SK_SK_EE5127_report.aux  SK_SK_EE5127_report.bbl  SK_SK_EE5127_report.blg  SK_SK_EE5127_report.tex  references.bib
report/deliverable_I/: SK_SK_EE5127_Presentation.odp  SK_SK_EE5127_Presentation.pptx  SK_SK_EE5127_report.bbl  SK_SK_EE5127_report.blg
report/deliverable_IIa/: SK_SK_IIa_report.bbl  SK_SK_IIa_report.tex
